from common.BaseClass import BaseClass
from connectors.BinanceConnection import BinanceConnection
from connectors.SqlConnector import SqlConnector
from models.BinanceAccountInfo import BinanceAccountInfo

class CreateNewOrders():
    def __init__(self,bc:BaseClass,binanace_conn:BinanceConnection,conn:SqlConnector):
        pass

    